apps/service-a/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-a-service
spec:
  type: ClusterIP
  selector:
    app: app-a
  ports:
    - port: 80
      targetPort: 5000
