apps/service-a/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-a-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: "/$2"
spec:
  ingressClassName: external-nginx
  rules:
  - http:
      paths:
      - path: /serviceA
        pathType: Prefix
        backend:
          service:
            name: app-a-service
            port:
              number: 80
